[gd_scene load_steps=34 format=3 uid="uid://dl1od1gcmhude"]

[ext_resource type="Script" path="res://levelMedium.gd" id="1_1gur2"]
[ext_resource type="FontFile" uid="uid://x07w57hnrhsp" path="res://addons/fonts/PL Benguiat Caslon/PL Benguiat Caslon.ttf" id="4_hkgif"]
[ext_resource type="FontFile" uid="uid://ba8tt4gxqogjq" path="res://addons/fonts/FrancoisOne.ttf" id="5_un0h5"]
[ext_resource type="FontFile" uid="uid://cxo00kjcsmt7t" path="res://addons/fonts/BalooBhaijaan-Regular.ttf" id="6_0ekk2"]
[ext_resource type="PackedScene" uid="uid://bc53oswkrckcs" path="res://Enemy.tscn" id="6_et41b"]
[ext_resource type="Texture2D" uid="uid://xyjnthjc66mh" path="res://sprites/icons8-pause-48.png" id="6_iba12"]
[ext_resource type="Texture2D" uid="uid://c5i6mfte4gr7j" path="res://sprites/1-back.png" id="7_10swi"]
[ext_resource type="Texture2D" uid="uid://cf5gs03q6bx1j" path="res://sprites/icons8-keyboard-80.png" id="7_mcufh"]
[ext_resource type="FontFile" uid="uid://cnff5mjjigvl" path="res://addons/fonts/PoiretOne-Regular.ttf" id="8_7woce"]
[ext_resource type="PackedScene" uid="uid://brvhmdiaxfp52" path="res://loading.tscn" id="9_csfj4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8vqqn"]
size = Vector2(96, 1410)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_srbgh"]
bg_color = Color(0.254902, 0.254902, 0.254902, 0.713726)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xbxyj"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qagrc"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.8, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jvcnq"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.505882, 0.427451, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0t4ou"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.8, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xojeu"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oe7rk"]
bg_color = Color(1, 1, 1, 1)
draw_center = false
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w6l2n"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ydod0"]
draw_center = false
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aqtej"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p3jic"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ukm50"]
content_margin_left = 15.0
content_margin_right = 15.0
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ofik2"]
content_margin_left = 15.0
content_margin_right = 15.0
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xna3y"]
content_margin_left = 15.0
content_margin_right = 15.0
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i78o2"]
content_margin_left = 15.0
content_margin_right = 15.0
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hmq63"]
content_margin_left = 15.0
content_margin_right = 15.0
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4rvbm"]
bg_color = Color(0.254902, 0.254902, 0.254902, 0.713726)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r8tlm"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nr5hk"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.8, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ejv3i"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.505882, 0.427451, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vxj16"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.8, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hh6b5"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Main" type="Node2D"]
script = ExtResource("1_1gur2")

[node name="TextureRect" type="TextureRect" parent="."]
offset_top = -85.0
offset_right = 2645.0
offset_bottom = 1447.0
texture = ExtResource("7_10swi")
expand_mode = 1

[node name="LoseArea" type="Area2D" parent="."]
position = Vector2(30, 60)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LoseArea"]
position = Vector2(-81, 560)
shape = SubResource("RectangleShape2D_8vqqn")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 15.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 211.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopRow2" type="CenterContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="TopRow" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/TopRow2"]
layout_mode = 2

[node name="EnemiesKilledLabel" type="Label" parent="CanvasLayer/VBoxContainer/TopRow2/TopRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Words:"

[node name="EnemiesKilledValue" type="Label" parent="CanvasLayer/VBoxContainer/TopRow2/TopRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"

[node name="MiddleRow" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SpawnContainer" type="CanvasLayer" parent="CanvasLayer/VBoxContainer/MiddleRow"]

[node name="Marker2D" type="Marker2D" parent="CanvasLayer/VBoxContainer/MiddleRow/SpawnContainer"]
position = Vector2(2576, 479)

[node name="Marker2D2" type="Marker2D" parent="CanvasLayer/VBoxContainer/MiddleRow/SpawnContainer"]
position = Vector2(2577, 625)

[node name="Marker2D4" type="Marker2D" parent="CanvasLayer/VBoxContainer/MiddleRow/SpawnContainer"]
position = Vector2(2577, 332)

[node name="Marker2D3" type="Marker2D" parent="CanvasLayer/VBoxContainer/MiddleRow/SpawnContainer"]
position = Vector2(2578, 208)

[node name="EnemyContainer" type="Node2D" parent="CanvasLayer/VBoxContainer/MiddleRow"]
position = Vector2(1430, 168)

[node name="Enemy" parent="CanvasLayer/VBoxContainer/MiddleRow/EnemyContainer" instance=ExtResource("6_et41b")]
position = Vector2(1545, 151)

[node name="BottomRow" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="DifficultyLabel" type="Label" parent="CanvasLayer/VBoxContainer/BottomRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Difficulty:"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/BottomRow"]
layout_mode = 2

[node name="DifficultyValue" type="Label" parent="CanvasLayer/VBoxContainer/BottomRow/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"

[node name="GameOverScreen" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_srbgh")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/GameOverScreen"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameOverScreen/CenterContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_hkgif")
theme_override_font_sizes/font_size = 120
text = "WORD"
horizontal_alignment = 1

[node name="WordCount" type="Label" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
horizontal_alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_hkgif")
theme_override_font_sizes/font_size = 120
text = "Game Over"

[node name="RestartButton" type="Button" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.8, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_disabled_color = Color(0.8, 0.8, 1, 1)
theme_override_fonts/font = ExtResource("5_un0h5")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xbxyj")
theme_override_styles/hover = SubResource("StyleBoxFlat_qagrc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jvcnq")
theme_override_styles/disabled = SubResource("StyleBoxFlat_0t4ou")
theme_override_styles/focus = SubResource("StyleBoxFlat_xojeu")
text = "Restart"

[node name="Map" type="Button" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.8, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_disabled_color = Color(0.8, 0.8, 1, 1)
theme_override_fonts/font = ExtResource("5_un0h5")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xbxyj")
theme_override_styles/hover = SubResource("StyleBoxFlat_qagrc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jvcnq")
theme_override_styles/disabled = SubResource("StyleBoxFlat_0t4ou")
theme_override_styles/focus = SubResource("StyleBoxFlat_xojeu")
text = "Back to Map"

[node name="option" type="Button" parent="CanvasLayer"]
offset_left = 2345.0
offset_top = 49.0
offset_right = 2457.0
offset_bottom = 140.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.345098, 0.176471, 0.0313726, 1)
theme_override_colors/font_focus_color = Color(0.345098, 0.176471, 0.0313726, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_un0h5")
theme_override_font_sizes/font_size = 29
theme_override_styles/normal = SubResource("StyleBoxFlat_oe7rk")
theme_override_styles/hover = SubResource("StyleBoxTexture_w6l2n")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ydod0")
theme_override_styles/disabled = SubResource("StyleBoxFlat_aqtej")
theme_override_styles/focus = SubResource("StyleBoxFlat_p3jic")
icon = ExtResource("6_iba12")
icon_alignment = 2
expand_icon = true

[node name="keyboard" type="Button" parent="CanvasLayer"]
offset_left = 131.0
offset_top = 1150.0
offset_right = 241.0
offset_bottom = 1230.0
theme_override_styles/normal = SubResource("StyleBoxFlat_ukm50")
theme_override_styles/hover = SubResource("StyleBoxFlat_ofik2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xna3y")
theme_override_styles/disabled = SubResource("StyleBoxFlat_i78o2")
theme_override_styles/focus = SubResource("StyleBoxFlat_hmq63")
icon = ExtResource("7_mcufh")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="startGame" type="PanelContainer" parent="CanvasLayer2"]
offset_right = 2582.0
offset_bottom = 1285.0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer2/startGame"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2/startGame/CenterContainer"]
layout_mode = 2

[node name="level2" type="Label" parent="CanvasLayer2/startGame/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_0ekk2")
theme_override_font_sizes/font_size = 80
text = "Game Challenge:
Basic Phrases"
horizontal_alignment = 1
vertical_alignment = 1

[node name="start" type="Button" parent="CanvasLayer2/startGame/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.8, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_disabled_color = Color(0.8, 0.8, 1, 1)
theme_override_fonts/font = ExtResource("5_un0h5")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_xbxyj")
theme_override_styles/hover = SubResource("StyleBoxFlat_qagrc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jvcnq")
theme_override_styles/disabled = SubResource("StyleBoxFlat_0t4ou")
theme_override_styles/focus = SubResource("StyleBoxFlat_xojeu")
text = "Start Game"

[node name="Paused" type="PanelContainer" parent="CanvasLayer2"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -24.0
offset_right = 27.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4rvbm")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer2/Paused"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer2/Paused/CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 13

[node name="Label" type="Label" parent="CanvasLayer2/Paused/CenterContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_7woce")
theme_override_font_sizes/font_size = 120
text = "Paused"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="CanvasLayer2/Paused/CenterContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.8, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_disabled_color = Color(0.8, 0.8, 1, 1)
theme_override_fonts/font = ExtResource("5_un0h5")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_r8tlm")
theme_override_styles/hover = SubResource("StyleBoxFlat_nr5hk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ejv3i")
theme_override_styles/disabled = SubResource("StyleBoxFlat_vxj16")
theme_override_styles/focus = SubResource("StyleBoxFlat_hh6b5")
text = "Resume"

[node name="Restart" type="Button" parent="CanvasLayer2/Paused/CenterContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.8, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_disabled_color = Color(0.8, 0.8, 1, 1)
theme_override_fonts/font = ExtResource("5_un0h5")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_r8tlm")
theme_override_styles/hover = SubResource("StyleBoxFlat_nr5hk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ejv3i")
theme_override_styles/disabled = SubResource("StyleBoxFlat_vxj16")
theme_override_styles/focus = SubResource("StyleBoxFlat_hh6b5")
text = "Restart"

[node name="Map" type="Button" parent="CanvasLayer2/Paused/CenterContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.8, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_disabled_color = Color(0.8, 0.8, 1, 1)
theme_override_fonts/font = ExtResource("5_un0h5")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_r8tlm")
theme_override_styles/hover = SubResource("StyleBoxFlat_nr5hk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ejv3i")
theme_override_styles/disabled = SubResource("StyleBoxFlat_vxj16")
theme_override_styles/focus = SubResource("StyleBoxFlat_hh6b5")
text = "QUIT"

[node name="loading" parent="CanvasLayer2" instance=ExtResource("9_csfj4")]
visible = false

[connection signal="body_entered" from="LoseArea" to="." method="_on_lose_area_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_difficulty_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="button_down" from="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer/Map" to="." method="_on_map_button_down"]
[connection signal="button_down" from="CanvasLayer/option" to="." method="_on_option_button_down"]
[connection signal="button_down" from="CanvasLayer2/startGame/CenterContainer/VBoxContainer/start" to="." method="_on_start_button_down"]
[connection signal="button_down" from="CanvasLayer2/Paused/CenterContainer/VBoxContainer2/Resume" to="." method="_on_resume_button_down"]
[connection signal="button_down" from="CanvasLayer2/Paused/CenterContainer/VBoxContainer2/Restart" to="." method="_on_restart_button_down"]
[connection signal="button_down" from="CanvasLayer2/Paused/CenterContainer/VBoxContainer2/Map" to="." method="_on_map_button_down"]
